Carrito con total de productos

--- a/frontend/src/app/modules/comprador/carrito/carrito.component.html
+++ b/frontend/src/app/modules/comprador/carrito/carrito.component.html
@@ -21,7 +21,7 @@
               </div>
         </div>
         <div class="col col-lg-4"></div>
-        
+
     </div>
     <div class="row">
         <div class="col col-lg-4"></div>
@@ -45,4 +45,4 @@
         <div class="col col-lg-4"></div>
     </div>
 </div>
-
+<app-footer></app-footer>
