--- a/frontend/src/app/modules/shared/crear-cuenta/crear-cuenta.component.html
+++ b/frontend/src/app/modules/shared/crear-cuenta/crear-cuenta.component.html
@@ -20,6 +20,10 @@
                 <input type="text" class="form-control" required />
               </div>
               <div class="form-group">
+                <label >Agrega imagen de perfil:</label>
+                <input type="file" id="img" name="img" accept="image/*" />
+              </div>
+              <div class="form-group">
                 <div class="row">
                   <div class="col">
                     <label for="exampleInputEmail1"
