Newsfeed de base de datos

--- a/frontend/src/app/modules/info/news-feed/news-feed.component.html
+++ b/frontend/src/app/modules/info/news-feed/news-feed.component.html
@@ -18,107 +18,23 @@
         </div>
       </div>
       <div class="row justify-content-center pb-3">
-        <div class="col-md-7">
+        <div class="col-md-7" *ngFor="let post of feed">
           <div class="card">
             <div class="card-header">
-              <img src="../assets/img/Eduardo.jpeg" class="rounded mr-2" alt="...">
-              <strong class="mr-auto">Eduardo</strong>
+              <img src="{{ post.user.profile_pic }}" class="rounded mr-2" alt="...">
+              <strong class="mr-auto">{{ post.user.name }}</strong>
             </div>
             <div class="card-body">
-              <h5 class="card-title">Acerca del proyecto:</h5>
-              <p class="card-text">En muchas ocasiones queremos vender artículos nuestros que se encuentran en buenas condiciones, sin embargo, es difícil llegar a un acuerdo con personas que no conocemos..</p>
+              <p class="card-text" style="margin-bottom: 2rem;white-space:pre-wrap;">{{ post.message }}</p>
             </div>
             <div class="card-footer text-muted">
-              15 min ago
+              {{ post.time }}
             </div>
           </div>
+          <br>
         </div>
      </div>
-     <div class="row justify-content-center pb-3">
-      <div class="col-md-7">
-        <div class="card">
-          <div class="card-header">
-            <img src="../assets/img/Naji.jpeg" class="rounded mr-2" alt="...">
-            <strong class="mr-auto">Naji</strong>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Acerca del proyecto:</h5>
-            <p class="card-text">Para poder ser vendedor/comprador en la aplicación se necesitará una cuenta la cual pedirá como requisitos: correo electrónico, la creación de una contraseña e identificación oficial como medida de seguridad. Al realizarse una compra, la aplicación retendrá el capital a disposición y lo liberará al tener el producto en nuestras manos, después de comprobar su condición.</p>
-          </div>
-          <div class="card-footer text-muted">
-            2 hours ago
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center pb-3">
-      <div class="col-md-7">
-        <div class="card">
-          <div class="card-header">
-            <img src="../assets/img/Diegolas.jpeg" class="rounded mr-2" alt="...">
-            <strong class="mr-auto">Diegolas</strong>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Acerca del proyecto:</h5>
-            <p class="card-text">Otras soluciones como Segunda Mano y Mercadolibre obligan a existir un contacto entre comprador y vendedor, lo cual puede causar inseguridad y falta de integridad, además de desconfianza al vender tu producto.</p>
-          </div>
-          <div class="card-footer text-muted">
-            13 hours ago
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center pb-3">
-      <div class="col-md-7">
-        <div class="card">
-          <div class="card-header">
-            <img src="../assets/img/Schlemp.jpeg" class="rounded mr-2" alt="...">
-            <strong class="mr-auto">Schlam</strong>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Acerca del proyecto:</h5>
-            <p class="card-text">Lo malo es que nunca sabemos si es seguro vender tus productos a esas personas ya que corremos el riesgo de que sea un perfil falso y al final te citen en algún lugar riesgoso para despojarte de tu producto.</p>
-          </div>
-          <div class="card-footer text-muted">
-            1 day ago
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center pb-3">
-      <div class="col-md-7">
-        <div class="card">
-          <div class="card-header">
-            <img src="../assets/img/Diegolas.jpeg" class="rounded mr-2" alt="...">
-            <strong class="mr-auto">Diegolas</strong>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Acerca del proyecto:</h5>
-            <p class="card-text">Solución: Crear una herramienta en donde interpretaremos el rol de intermediario entre vendedor y comprador. El servicio como intermediario asegura que el producto dado por el vendedor esté en buenas condiciones y que se haya recibido el pago por parte del comprador, antes de enviar el producto y el dinero, respectivamente.</p>
-          </div>
-          <div class="card-footer text-muted">
-            2 days ago
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center pb-3">
-      <div class="col-md-7">
-        <div class="card">
-          <div class="card-header">
-            <img src="../assets/img/Naji.jpeg" class="rounded mr-2" alt="...">
-            <strong class="mr-auto">Naji</strong>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Acerca del proyecto:</h5>
-            <p class="card-text">La aplicación web a desarrollar tendrá como principal función generar la confianza de las compras por internet en los usuarios siendo un intermediario entre el comprador y el vendedor. Los vendedores podrán ingresar para postear sus productos.</p>
-          </div>
-          <div class="card-footer text-muted">
-            4 days ago
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 <app-footer></app-footer>
 
