--- a/frontend/src/app/modules/shared/log-in/log-in.component.html
+++ b/frontend/src/app/modules/shared/log-in/log-in.component.html
@@ -17,6 +17,8 @@
                   type="email"
                   class="form-control"
                   id="exampleInputEmail1"
+                  [(ngModel)] = "email"
+                  name = "email"
                   aria-describedby="emailHelp"
                   placeholder="name@example.com"
                   required
@@ -31,6 +33,8 @@
                   type="password"
                   class="form-control"
                   id="exampleInputPassword1"
+                  [(ngModel)]= "password"
+                  name = "password"
                   required
                 />
               </div>
