Conexion en angular casi lista

--- a/frontend/src/app/modules/comprador/carrito/carrito.component.html
+++ b/frontend/src/app/modules/comprador/carrito/carrito.component.html
@@ -3,37 +3,6 @@
     <div class="row justify-content-center">
         <div class="col-10 p-4 list-inline-item">
           <h1 class="display-3" >Mi carrito</h1>
-          <hr class="my-4" />
-        </div>
-      </div>
-    <div class="row" *ngFor="let product of carrito.products">
-        <div class="col col-lg-4"></div>
-        <div class="col col-lg-4">
-            <div class="card mt-3" >
-                <img src="{{ product.url }}" style="width: auto; height:200px" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">{{ product.name }}</h5>
-                  <p class="card-text">
-                    {{ product.description }}
-                  </p>
-                  <p class="card-text">${{ product.price }}.00.</p>
-                </div>
-              </div>
-        </div>
-        <div class="col col-lg-4"></div>
-
-    </div>
-    <div class="row">
-        <div class="col col-lg-4"></div>
-        <div class="col col-lg-4">
-            <button
-            type="button"
-            class="btn btn-primary btn-lg btn-block"
-            routerLink="/comprar"
-          >
-            Pagar
-          </button>
-          <hr />
           <button
             type="button"
             class="btn btn-outline-danger btn-block"
@@ -42,7 +11,63 @@
             Seguir comprando
           </button>
         </div>
-        <div class="col col-lg-4"></div>
-    </div>
+      </div>
 </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="p-2 px-3 text-uppercase">Producto</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="py-2 text-uppercase">Precio</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="py-2 text-uppercase">Eliminar</div>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let product of carrito.products">
+                  <th scope="row" class="border-0">
+                    <div class="p-2">
+                      <img src="{{ product.url }}" alt="" width="70" class="img-fluid rounded shadow-sm">
+                      <div class="ml-3 d-inline-block align-middle">
+                        <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle">{{ product.name }}</a></h5><span class="text-muted font-weight-normal font-italic d-block"></span>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="border-0 align-middle"><strong>${{ product.price }}.00</strong></td>
+                  <td class="border-0 align-middle"><a class="text-dark" (click)="eliminarDelCarrito(product.idProd)"><i class="fa fa-trash"></i></a></td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="p-2">
+                      <div class="ml-3 d-inline-block align-middle">
+                      </div>
+                    </div>
+                  </th>
+                  <td class="align-middle"><li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Total</strong></td>
+                  <td class="align-middle">${{ total }}.00</td>
+                </tr>
+
+              </tbody>
+            </table>
+          </div>
+          <button
+          type="button"
+          class="btn btn-primary btn-block"
+          routerLink="/comprar"
+          >
+          Pagar
+          </button>
+        </div>
+      </div>
+    </div>
+
 <app-footer></app-footer>
