--- a/frontend/src/app/modules/info/news-feed/news-feed.component.html
+++ b/frontend/src/app/modules/info/news-feed/news-feed.component.html
@@ -30,7 +30,7 @@
           <div class="card">
             <div class="card-header">
               <img src="{{ post.user.profile_pic }}" class="rounded mr-2" alt="...">
-              <strong class="mr-auto">{{ post.user.name }}</strong>
+              <strong class="mr-auto">{{ post.user.name }} {{ post.user.lname}} </strong>
             </div>
             <div class="card-body">
               <p class="card-text" style="margin-bottom: 2rem;white-space:pre-wrap;">{{ post.message }}</p>
