--- a/frontend/src/app/modules/vendedor/editar/editar.component.html
+++ b/frontend/src/app/modules/vendedor/editar/editar.component.html
@@ -24,30 +24,14 @@
               </div>
               <div class="form-group">
                 <label >Condición:</label>
-                <input type="text" class="form-control" required />
-              </div>
-              <div class="form-group">
-                <div class="row">
-                  <div class="col">
-                    <label >Cantidad:</label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                      <option>6</option>
-                      <option>7</option>
-                      <option>8</option>
-                      <option>9</option>
-                      <option>10</option>
-                    </select>
-                  </div>
-                </div>
+                 <input
+                  [(ngModel)]="product.condition"
+                  [value]="product.condition"
+                  type="string"
+                  class="form-control"
+                  name="condition"
+                  required
+                />
               </div>
               <div class="form-group">
                 <label >Precio:</label>
@@ -81,7 +65,7 @@
               <button
                 type="submit"
                 class="btn btn-primary btn-block"
-                (click)="updateProduct(name, description, price)"
+                (click)="updateProduct()"
 
               >
                 Guardar cambios
