--- a/frontend/src/app/modules/comprador/comprar/comprar.component.html
+++ b/frontend/src/app/modules/comprador/comprar/comprar.component.html
@@ -12,7 +12,7 @@
           <div class="card-body">
             <div class="container">
               <div class="row">
-                <div class="col-md-4 order-md-2 mb-4">
+                <div class="col-md-4 order-md-2 mb-4" *ngIf="carrito">
                   <div class="row" *ngFor="let product of carrito.products">
                     <div class="col col-lg-12">
                         <div class="card mt-3" >
