--- a/frontend/src/app/modules/shared/perfil/perfil.component.html
+++ b/frontend/src/app/modules/shared/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <div class="container-fluid parallax-3">
   <div class="row align-items-center pt-4">
-    <div class="col align-self-center perfil text-center">
+    <div class="col align-self-center perfil text-center" *ngIf="user">
       <img src="{{ user.user.profile_pic }}" alt="" />
       <hr />
       <p
