Errores ng lint de codigo

--- a/frontend/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/main-components/nav-bar/nav-bar.component.html
@@ -59,7 +59,7 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            routerLink="/carrito"
+            routerLink="../carrito"
             [routerLinkActive]="'active'"
             ><mdb-icon fas icon="shopping-cart" align="center" ></mdb-icon></a
           >
