--- a/frontend/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/main-components/nav-bar/nav-bar.component.html
@@ -56,6 +56,14 @@
             >Log in</a
           >
         </li>
+         <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLink="../log-in"
+            [routerLinkActive]="'active'"
+            >Log out</a
+          >
+        </li>
         <li class="nav-item">
           <a
             class="nav-link"
