--- a/frontend/src/app/modules/shared/crear-cuenta/crear-cuenta.component.html
+++ b/frontend/src/app/modules/shared/crear-cuenta/crear-cuenta.component.html
@@ -10,94 +10,65 @@
       <div class="col-lg-4 col-md-6 col-sm-10">
         <div class="card">
           <div class="card-body">
-            <form (submit)="onSubmit()" ngNativeValidate>
+            <form action="" #f="ngForm" (ngSubmit)="addUser()" ngNativeValidate>
               <div class="form-group">
                 <label >Nombre:</label>
-                <input type="text" class="form-control" required />
+                 <input
+                  [(ngModel)]="user.name"
+                  type="text"
+                  class="form-control"
+                  name="name"
+                  required
+                />
               </div>
               <div class="form-group">
                 <label >Apellidos:</label>
-                <input type="text" class="form-control" required />
+                 <input
+                  [(ngModel)]="user.lname"
+                  type="text"
+                  class="form-control"
+                  name="lname"
+                  required
+                />
               </div>
               <div class="form-group">
-                <label >Agrega imagen de perfil:</label>
-                <input type="file" id="img" name="img" accept="image/*" />
+                <label >Agrega URL de imagen de perfil:</label>
+                <input
+                  [(ngModel)]="user.profile_pic"
+                  type="text"
+                  class="form-control"
+                  name="profile_pic"
+                  required
+                />
               </div>
               <div class="form-group">
-                <div class="row">
-                  <div class="col">
-                    <label for="exampleInputEmail1"
-                      >Feha de nacimiento:</label
-                    >
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <select class="form-control">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                      <option>6</option>
-                      <option>7</option>
-                      <option>8</option>
-                      <option>9</option>
-                      <option>10</option>
-                      <option>11</option>
-                      <option>12</option>
-                      <option>13</option>
-                      <option>14</option>
-                      <option>15</option>
-                      <option>16</option>
-                      <option>17</option>
-                      <option>18</option>
-                      <option>19</option>
-                      <option>20</option>
-                      <option>21</option>
-                      <option>22</option>
-                      <option>23</option>
-                      <option>24</option>
-                      <option>25</option>
-                      <option>26</option>
-                      <option>27</option>
-                      <option>28</option>
-                      <option>29</option>
-                      <option>30</option>
-                      <option>31</option>
-                    </select>
-                  </div>
-                  <div class="col">
-                    <select class="form-control">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                      <option>6</option>
-                      <option>7</option>
-                      <option>8</option>
-                      <option>9</option>
-                      <option>10</option>
-                      <option>11</option>
-                      <option>12</option>
-                    </select>
-                  </div>
-                  <div class="col">
-                    <input type="text" class="form-control" placeholder="Año" />
-                  </div>
-                </div>
+                <label >Fecha de nacimiento:</label>
+                <input
+                  [(ngModel)]="user.dBirth"
+                  type="date"
+                  class="form-control"
+                  name="dBirth"
+                  required
+                />
               </div>
               <div class="form-group">
                 <label >País de residencia:</label>
-                <input type="text" class="form-control" required />
+                <input
+                  [(ngModel)]="user.country"
+                  type="text"
+                  class="form-control"
+                  name="country"
+                  required
+                />
               </div>
               <div class="form-group">
                 <label>Email:</label>
                 <input
+                  [(ngModel)]="user.email"
                   type="email"
                   class="form-control"
                   id="exampleInputEmail1"
+                  name="email"
                   aria-describedby="emailHelp"
                   placeholder="name@example.com"
                   required
@@ -108,11 +79,23 @@
               </div>
               <div class="form-group">
                 <label>Password:</label>
-                <input type="password" class="form-control" required />
+                <input
+                  [(ngModel)]="password"
+                  name="password"
+                  type="password"
+                  class="form-control"
+                  minlength="6"
+                  required />
               </div>
               <div class="form-group">
                 <label >Reingresa password:</label>
-                <input type="password" class="form-control" required />
+                <input
+                  [(ngModel)]="reingresaPassword"
+                  name="reingresaPassword"
+                  type="password"
+                  class="form-control"
+                  minlength="6"
+                  required />
               </div>
               <button type="submit" class="btn btn-primary btn-block" >
                 Crear cuenta
