--- a/frontend/src/app/modules/vendedor/editar/editar.component.html
+++ b/frontend/src/app/modules/vendedor/editar/editar.component.html
@@ -59,8 +59,14 @@
                 ></textarea>
               </div>
               <div class="form-group">
-                <label >Agregar imagen:</label>
-                <input type="file" id="img" name="img" accept="image/*" />
+                <label >URL de imagen:</label>
+                <input
+                  [(ngModel)]="product.url"
+                  type="text"
+                  class="form-control"
+                  name="url"
+                  required
+                />
               </div>
               <button
                 type="submit"
