--- a/frontend/src/app/modules/comprador/comprar/comprar.component.html
+++ b/frontend/src/app/modules/comprador/comprar/comprar.component.html
@@ -33,7 +33,7 @@
             </div>
                 <div class="col-md-8 order-md-1">
                   <h4 class="mb-3" >Dirección de envío</h4>
-                  <form action="" (submit)="onSubmit()" ngNativeValidate>
+                  <form action="" (submit)="buyItems()" ngNativeValidate>
                     <div class="row">
                       <div class="col-md-6 mb-3">
                         <label for="firstName" >Nombre</label>
@@ -63,7 +63,9 @@
                       <input
                         type="text"
                         class="form-control"
-                        id="address"
+                        [(ngModel)]="address.street"
+                        id="street"
+                        name="street"
                         placeholder="1234 Main St"
                         required
                       />
@@ -77,7 +79,9 @@
                       <input
                         type="text"
                         class="form-control"
-                        id="address2"
+                        [(ngModel)]="address.apartment"
+                        id="apartment"
+                        name="apartment"
                         placeholder="Apartment or suite"
                       />
                     </div>
@@ -87,7 +91,9 @@
                         <label for="country" >País</label>
                         <select
                           class="custom-select d-block w-100"
+                          [(ngModel)]="address.country"
                           id="country"
+                          name="country"
                           required
                         >
                           <option value="" >Escoja...</option>
@@ -98,8 +104,9 @@
                         <label for="state" >Estado</label>
                         <select
                           class="custom-select d-block w-100"
+                          [(ngModel)]="address.state"
                           id="state"
-                          required
+                          name="state"
                         >
                           <option value="" >Escoja...</option>
                           <option>CDMX</option>
@@ -112,7 +119,9 @@
                           type="text"
                           pattern="[0-9]{5}"
                           class="form-control"
+                          [(ngModel)]="address.zip"
                           id="zip"
+                          name="zip"
                           placeholder="12345"
                           title="CP de 5 digitos"
                           required
@@ -137,8 +146,9 @@
                     <div class="custom-control custom-checkbox">
                       <input
                         type="checkbox"
+                        id="saveInfo"
+                        name="saveInfo"
                         class="custom-control-input"
-                        id="save-info"
                       />
                       <label class="custom-control-label" for="save-info"
                         >Guardar esta información para después</label
@@ -146,46 +156,7 @@
                     </div>
                     <hr class="mb-4" />
 
-                    <h4 class="mb-3" >Forma de pago</h4>
-                    <div class="d-block my-3">
-                      <div class="custom-control custom-radio">
-                        <input
-                          id="credit"
-                          name="paymentMethod"
-                          type="radio"
-                          class="custom-control-input"
-                          checked=""
-                          required
-                        />
-                        <label class="custom-control-label" for="credit"
-                          >Tarjeta de crédito</label
-                        >
-                      </div>
-                      <div class="custom-control custom-radio">
-                        <input
-                          id="debit"
-                          name="paymentMethod"
-                          type="radio"
-                          class="custom-control-input"
-                          required
-                        />
-                        <label class="custom-control-label" for="debit"
-                          >Tarjeta de débito</label
-                        >
-                      </div>
-                      <div class="custom-control custom-radio">
-                        <input
-                          id="paypal"
-                          name="paymentMethod"
-                          type="radio"
-                          class="custom-control-input"
-                          required
-                        />
-                        <label class="custom-control-label" for="paypal"
-                          >Paypal</label
-                        >
-                      </div>
-                    </div>
+                    <h4 class="mb-3" >Pago</h4>
                     <div class="row">
                       <div class="col-md-6 mb-3">
                         <label for="cc-name" >Nombre en tarjeta</label>
