Solucion temporal del id persistente

--- a/frontend/src/app/modules/comprador/comprar/comprar.component.html
+++ b/frontend/src/app/modules/comprador/comprar/comprar.component.html
@@ -33,7 +33,7 @@
             </div>
                 <div class="col-md-8 order-md-1">
                   <h4 class="mb-3" >Dirección de envío</h4>
-                  <form action="" (submit)="buyItems()" ngNativeValidate>
+                  <form action="" (submit)="buyItems()" >
                     <div class="row">
                       <div class="col-md-6 mb-3">
                         <label for="firstName" >Nombre</label>
@@ -127,32 +127,6 @@
                           required
                         />
                       </div>
-                    </div>
-                    <hr class="mb-4" />
-                    <div class="custom-control custom-checkbox">
-                      <input
-                        type="checkbox"
-                        class="custom-control-input"
-                        id="same-address"
-                      />
-                      <label
-                        class="custom-control-label"
-                        for="same-address"
-
-                        >Dirección de envío es la misma que mi dirección de
-                        pago</label
-                      >
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                      <input
-                        type="checkbox"
-                        id="saveInfo"
-                        name="saveInfo"
-                        class="custom-control-input"
-                      />
-                      <label class="custom-control-label" for="save-info"
-                        >Guardar esta información para después</label
-                      >
                     </div>
                     <hr class="mb-4" />
 
