--- a/frontend/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/main-components/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
     <a
       class="navbar-brand"
       style="font-family: 'Roboto mono', monospace;"
-      href=""
+      routerLink=""
       >VendeTuProducto.com</a
     >
     <button
@@ -46,14 +46,6 @@
             routerLink="../perfil"
             [routerLinkActive]="'active'"
             >Perfil</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            routerLink="../log-in"
-            [routerLinkActive]="'active'"
-            >Log in</a
           >
         </li>
          <li class="nav-item">
