Solucion temporal de logout

--- a/frontend/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/main-components/nav-bar/nav-bar.component.html
@@ -51,7 +51,7 @@
          <li class="nav-item">
           <a
             class="nav-link"
-            routerLink="../log-in"
+            (click)="logOut()"
             [routerLinkActive]="'active'"
             >Log out</a
           >
