Perfil ya jala datos aunque no tenga productos en venta

--- a/frontend/src/app/modules/comprador/comprar/comprar.component.html
+++ b/frontend/src/app/modules/comprador/comprar/comprar.component.html
@@ -33,7 +33,7 @@
             </div>
                 <div class="col-md-8 order-md-1">
                   <h4 class="mb-3" >Dirección de envío</h4>
-                  <form action="" (submit)="buyItems()" >
+                  <form action="" (submit)="buyItems()" ngNativeValidate>
                     <div class="row">
                       <div class="col-md-6 mb-3">
                         <label for="firstName" >Nombre</label>
