--- a/frontend/src/app/main-components/footer/footer.component.html
+++ b/frontend/src/app/main-components/footer/footer.component.html
@@ -6,19 +6,19 @@
 
                     <ul>
                         <li>
-                            <a class="text-muted" href="../home">Home<span class="sr-only">(current)</span></a>
+                            <a class="text-muted" routerLink="../home">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li>
-                            <a class="text-muted" href="../newsfeed">News Feed</a>
+                            <a class="text-muted" routerLink="../newsfeed">News Feed</a>
                         </li>
                         <li>
-                            <a class="text-muted" href="../contacto">Contacto</a>
+                            <a class="text-muted" routerLink="../contacto">Contacto</a>
                         </li>
                         <li>
-                            <a class="text-muted" href="../perfil">Perfil</a>
+                            <a class="text-muted" routerLink="../perfil">Perfil</a>
                         </li>
                         <li>
-                            <a class="text-muted" href="../log-in">Log in</a>
+                            <a class="text-muted" routerLink="../log-in">Log in</a>
                         </li>
                     </ul>
                 </div>
