--- a/frontend/src/app/modules/shared/perfil/perfil.component.html
+++ b/frontend/src/app/modules/shared/perfil/perfil.component.html
@@ -25,11 +25,11 @@
   </div>
   <div class="row">
     <div
-      class="col col-lg-4"
+      class="col-md-4 col-sm-6 col-12"
       *ngFor="let product of products; let i = index"
     >
-      <div class="card">
-        <img src="{{ product.url }}" class="card-img-top" alt="..." />
+      <div class="card h-100">
+        <img src="{{ product.url }}" class="card-img-top" width="300" height="200" alt="..." />
         <div class="card-body">
           <h5 class="card-title" id="selected">{{ product.name }}</h5>
           <p class="card-text">{{ product.description }}</p>
