--- a/frontend/src/app/modules/comprador/comprar/comprar.component.html
+++ b/frontend/src/app/modules/comprador/comprar/comprar.component.html
@@ -26,7 +26,7 @@
                 </div>
                 <ul class="list-group mb-3">
                     <li class="list-group-item d-flex justify-content-between">
-                      <span>Total (USD)</span>
+                      <span>Total (MXN)</span>
                       <strong>${{ total }}.00</strong>
                     </li>
               </ul>
