--- a/frontend/src/app/modules/shared/perfil/perfil.component.html
+++ b/frontend/src/app/modules/shared/perfil/perfil.component.html
@@ -29,7 +29,7 @@
       *ngFor="let product of products; let i = index"
     >
       <div class="card h-100">
-        <img src="{{ product.url }}" class="card-img-top" width="300" height="200" alt="..." />
+        <img src="{{ product.url }}" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title" id="selected">{{ product.name }}</h5>
           <p class="card-text">{{ product.description }}</p>
