cambios necesarios para docker

--- a/frontend/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/main-components/nav-bar/nav-bar.component.html
@@ -48,7 +48,7 @@
             >Perfil</a
           >
         </li>
-         <li class="nav-item">
+         <li class="nav-item" *ngIf="!getActive()">
           <a
             class="nav-link"
             (click)="logOut()"
